...
                    Column(
                      mainAxisAlignment: MainAxisAlignment.start,
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: <Widget>[
                        Row(
                          children: <Widget>[
                            const Text('Float:'),
                            Checkbox(
                              value: !quantize,
                              onChanged: _initializing || isProcessing
                                  ? null
                                  : (_) {
                                      toggleMode();
...
                        onPressed: () => _compare(feed.length - index - 1),
                        style: ButtonStyle(
                          backgroundColor: WidgetStateProperty.all(
                            Colors.purple[100],
                          ),
                        ),
                        child: const Text('Compare'),
                      ),
                      _EmbeddingFeedItemType.comparison => ComparisonDisplay(
                        similarity: feedItem.similarity!,
                      ),
                      _EmbeddingFeedItemType.incomparable => const Text(
                        'Embeddings of different types cannot be compared',
...
